...
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get getStartedSubtitle => 'Sign In with your Google account, Apple account or with your phone number.';

  @override
  String get joinJourney => 'Join the Journey';

  @override
  String get account => 'Account';

  @override
  String get ourSocial => 'Our Social';
...
  String get proceed => 'Proceed';

  @override
  String get socialDialogDescription => 'At vero eos et accusamus et iusto odio dignissimos ducimus qui.';

  @override
  String get getStarted => 'Get Started';

  @override
  String get retry => 'Retry';

  @override
  String get cancel => 'Cancel';

  @override
  String get continueButton => 'Continue';

  @override
  String get next => 'Next';

  @override
  String get previous => 'Previous';

  @override
  String get done => 'Done';
...
  String get balance => 'Balance';

  @override
  String get waitAMoment => 'Wait a moment';

  @override
  String get skip => 'Skip';

  @override
  String get takeQuizAgain => 'Take Quiz Again';

  @override
  String get question => 'Question';
...
  String get termsOfService => 'Terms of Service';

  @override
  String get privacyPolicy => 'Privacy Policy';

  @override
  String get createAccount_title => 'Learn. Play. Earn';

  @override
  String get createAccount_subtitle => 'Sign In with your Google account, Apple account or with your Email Address.';

  @override
  String get walkThrough_title1 => 'Earn Gems Daily';
...
